# 8-retro-kbd-ctl

./: 8kbdctl.py  README  findings.txt  keys.txt  pyproject.toml  read-keys.py  scan-usb-hid.py  send-cmd.py
lib/: eightkbd.py  hiddev.py  keys.py  usb.py  util.py
src/eightkbdctl/: eightkbdctl.py  read-keys.py  scan-usb-hid.py
src/eightkbdctl/lib/: keys.py  usb.py  util.py
